--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About Accenture</h1>
+    <h1>About </h1>
     <ul>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, natus officiis temporibus delectus ducimus quasi aperiam numquam odit quia fugit repudiandae. Veritatis ipsum, odit voluptates animi facilis sapiente aperiam praesentium id ipsa enim, iste ab non consectetur eos amet autem necessitatibus similique voluptate quo, officia officiis rerum. Itaque, ipsa dignissimos?</p>
     </ul>>
