--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Accenture</h1>
+    <h1>accenture - High Performance. Delivered.</h1>
     <ul>
         <li> Technology </li>
         <li> Consulting </li>
-        <li> Outsourcing</li>
+        <li> Operations</li>
     </ul>>
 </body>
 </html>
